# green-cloud

./: .gitignore  Makefile  README.md  urls.txt
.kiro/hooks/: check-task-plan.json  validate-docker-compose.json
.kiro/plans/: implementation-plan.md  stretch-goal-multi-user.md  task-01-scaffolding.md  task-02-compose-stacks.md  task-03-registry.md  task-04-cicd-pipeline.md  task-05-deployment-agent.md  task-06-traefik-cloudflare.md  task-07-observability.md  task-08-carbon-engine.md  task-09-hardware-migration.md  task-10-polish.md
.kiro/steering/: best-practices.md  greencloud.md  workflow.md
docs/: how-to-guide.md  test-plan.md
docs/adr/: ADR-001-environment-isolation.md  ADR-002-public-ingress.md  ADR-003-carbon-data-source.md  ADR-004-build-strategy.md
docs/architecture/: deployment-flow.md  registry.md  system-design.md
docs/guides/: deploy-your-first-app.md
docs/learning/: carbon-aware-computing.md  cloudflare-tunnel.md  deployment-pipeline.md  docker-basics.md  reverse-proxy-and-traefik.md
docs/plan/: greencloud-project-blueprint.md
infra/: .env.example  docker-compose.dev.yml  docker-compose.infra.yml  docker-compose.meal-planner.yml  docker-compose.prod.yml  docker-compose.streaming-relay.yml
infra/cloudflare/: config.yml
scripts/: build-and-push.sh  registry-cleanup.sh  registry-list.sh  registry-tags.sh
services/app/api/: Dockerfile  pyproject.toml
services/app/api/app/: config.py  database.py  main.py  models.py  schemas.py
services/carbon-engine/: .dockerignore  Dockerfile  pyproject.toml
services/carbon-engine/app/: config.py  main.py
services/carbon-engine/app/routers/: carbon.py  energy.py  health.py
services/carbon-engine/app/services/: calculator.py  electricity_maps.py  power_monitor.py  scheduler.py
services/cli/: README.md  pyproject.toml
services/cli/greencloud/: api_client.py  cli.py  config_store.py
services/cli/greencloud/commands/: carbon.py  config.py  deploy.py  dev.py  status.py
services/greencloud-api/: .dockerignore  Dockerfile  pyproject.toml
services/greencloud-api/app/: auth.py  config.py  main.py
services/greencloud-api/app/db/: database.py  models.py
services/greencloud-api/app/models/: deployment.py  webhook.py
services/greencloud-api/app/routers/: app_deploy.py  apps.py  auth.py  deployments.py  health.py  webhooks.py
services/greencloud-api/app/services/: app_deployer.py  builder.py  registry.py  wol.py
services/greencloud-api/tests/: conftest.py  test_builder.py  test_webhooks.py
templates/: README.md
(+53 files in other folders)
