[project]
name = "greencloud-carbon-engine"
version = "0.1.0"
description = "Carbon-aware scheduling and emissions tracking for GreenCloud"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "httpx==0.27.2",
    "pydantic-settings==2.5.2",
    "prometheus-fastapi-instrumentator==7.0.0",
    "prometheus-client==0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "respx==0.21.1",
    "ruff==0.6.9",
]
