[project]
name = "greencloud-cli"
version = "0.1.0"
description = "GreenCloud CLI — manage deployments from the terminal"
requires-python = ">=3.12"
dependencies = [
    "typer==0.12.5",
    "rich==13.9.2",
    "httpx==0.27.2",
    "pyyaml==6.0.2",
]

[project.scripts]
greencloud = "greencloud.cli:app"

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "ruff==0.6.9",
]
