[project]
name = "greencloud-cli"
version = "0.1.0"
description = "GreenCloud CLI — manage deployments from the terminal"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "httpx==0.27.2",
    "pyyaml>=6.0",
]

[project.scripts]
greencloud = "greencloud.cli:app"

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "ruff==0.6.9",
]
