[project]
name = "greencloud-app-api"
version = "0.1.0"
description = "GreenCloud sample application API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.35",
    "psycopg2-binary==2.9.9",
    "pydantic-settings==2.5.2",
    "alembic==1.13.3",
    "prometheus-fastapi-instrumentator==7.0.0",
    "httpx==0.27.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "ruff==0.6.9",
]
